# libsyzygy

./: Cargo.toml  readme.org
src/: lib.rs  model.rs  rules.rs
src/core/: completable.rs  error.rs  mod.rs
