[package]
name = "syzygy"
version = "0.0.6"
edition = "2018"
description = "Next-gen todo library."
license = "GPL-2.0 OR GPL-3.0"

[lib]
crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
erased-serde = "0.3.16"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
typetag = "0.1.8"
uuid = { version = "0.8.2", features = ["v4", "serde"] }

